/*
Copyright 2021 The tKeel Authors.
Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at
        http://www.apache.org/licenses/LICENSE-2.0
Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
*/

syntax = "proto3";

package api.oauth2.v1;

import "google/api/annotations.proto";

option go_package = "github.com/tkeel-io/tkeel/api/oauth2/v1;v1";
option java_multiple_files = true;
option java_package = "api.oauth2.v1";

service Oauth2 {
  rpc IssueOauth2Token(IssueOauth2TokenRequest)
      returns (IssueOauth2TokenResponse) {
    option (google.api.http) = {
      post : "/oauth2"
      body : "*"
    };
  };
}

message IssueOauth2TokenRequest {
  string client_id = 1;
  string client_secret = 2;
}

message IssueOauth2TokenResponse {
  string access_token = 1;
  string token_type = 2;
  string refresh_token = 3;
  int32 expires_in = 4;
}